# cppgame-dogan-clion

./: .gitignore  CMakeLists.txt  SetView.h  TestView.h  main.cpp
